fix: toList()를 collect(Collectors.toList())로 변경